env/dev/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dwp-dev
  labels:
    app: auth-backend
spec:
  selector:
    app: auth-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: http
  type: ClusterIP
